teste com iframes

--- a/ex024/iframe002.html
+++ b/ex024/iframe002.html
@@ -18,7 +18,7 @@
     <h1>Teste com Iframe</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni iste maxime laudantium? Sint quasi accusamus provident nulla fuga sapiente culpa, adipisci earum necessitatibus in aut deleniti asperiores ex blanditiis molestias? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, ad nemo? Beatae reiciendis aperiam fugiat illo, incidunt dicta deleniti quam! Tempore expedita optio quia dolorum blanditiis illo voluptatem molestias aliquid!</p>
 
-    <iframe src="pagina001.html" frameborder="0" height="500px" width="500px"></iframe>
+    <iframe src="PaginasExtras/pagina001.html" frameborder="0" height="500px" width="500px"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam sit molestiae placeat exercitationem. Numquam, corrupti. Dolorum dignissimos quia nesciunt, porro error, culpa corporis vitae similique illo odit nemo atque rem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem fugiat aspernatur repellendus eius asperiores corporis vero enim, nisi maxime molestias soluta sit, iusto explicabo pariatur adipisci recusandae quas, animi culpa?</p>
 </body>
