--- a/ex024/iframe003.html
+++ b/ex024/iframe003.html
@@ -28,7 +28,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta perferendis possimus adipisci suscipit fugit animi corporis illo obcaecati ducimus reiciendis maiores quae, nihil delectus eum voluptate dolorem nulla quia excepturi!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quo! Molestiae perferendis earum laudantium saepe delectus obcaecati vero quisquam ut nobis illum consequatur, magni exercitationem labore quos, odit voluptate doloremque.</p>
 
-    <iframe src="" frameborder="1" id="tela" name="tela">Infelizmente seu navegador não é compatível</iframe>
+    <iframe srcdoc="<h1>Escolha uma das opções acima</h1>" frameborder="1" id="tela" name="tela">Infelizmente seu navegador não é compatível</iframe>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus culpa beatae, iusto eos saepe quidem et odit quasi reprehenderit eius perferendis sequi vero facilis nemo, sunt esse laudantium. Libero, repellendus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptates itaque vel amet quam. Quae voluptates delectus quidem debitis suscipit quis, blanditiis ab vel dolore tenetur error pariatur iure minus!</p>
 </body>
