--- a/ex026/MQ005/index.html
+++ b/ex026/MQ005/index.html
@@ -11,11 +11,11 @@
         <h1>Site Exemplo</h1>
         <menu>
             <ul>
-                <label for=""><a href="#">Opção 1</a></label>
-                <label for=""><a href="#">Opção 2</a></label>
-                <label for=""><a href="#">Opção 3</a></label>
-                <label for=""><a href="#">Opção 4</a></label>
-                <label for=""><a href="#">Opção 5</a></label>
+                <li><a href="#">Opção 1</a></li>
+                <li><a href="#">Opção 2</a></li>
+                <li><a href="#">Opção 3</a></li>
+                <li><a href="#">Opção 4</a></li>
+                <li><a href="#">Opção 5</a></li>
             </ul>
         </menu>
     </header>
