--- a/ex026/MQ005/index.html
+++ b/ex026/MQ005/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Site Exemplo</h1>
-        <menu>
+        <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -26,5 +28,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa, nobis odit, dolor sapiente est ullam placeat repellendus at voluptatem tempore debitis repellat? Ducimus qui perferendis enim illo unde quo. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod excepturi sunt quas fugiat atque, voluptatum culpa dolore. Quidem incidunt eligendi praesentium perspiciatis, animi atque inventore soluta, dolorem, aliquam tenetur cum!</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none';
+            }   else (itens.style.display = 'block');{
+                
+            }
+        }
+    </script>
 </body>
 </html>
