--- a/ex026/MQ005/index.html
+++ b/ex026/MQ005/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Site Exemplo</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
@@ -35,6 +35,13 @@
                 itens.style.display = 'none';
             }   else (itens.style.display = 'block');{
                 
+            }
+        }
+        function mudouTamanho() {
+            if (window.innerWidth >= 768){
+                itens.style.display = 'block'
+            } else{
+                itens.style.display = 'none'
             }
         }
     </script>
